--- a/debian/control
+++ b/debian/control
@@ -1,15 +1,22 @@
 Source: piktomir
-Section: unknown
+Section: games
 Priority: extra
 Maintainer: Yaroslav Leonov <alximik@aeon.btty.su>
-Build-Depends: cdbs, debhelper (>= 8.0.0)
+Build-Depends: cdbs, debhelper (>= 7.0.50~),  quilt (>= 0.46-7~), libglew1.6-dev, libglfw-dev, libfontconfig1-dev, libcurl3-dev
 Standards-Version: 3.9.4
-Homepage: <insert the upstream URL, if relevant>
+Homepage: http://www.piktomir.ru
 #Vcs-Git: git://git.debian.org/collab-maint/piktomir.git
 #Vcs-Browser: http://git.debian.org/?p=collab-maint/piktomir.git;a=summary
 
 Package: piktomir
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
-Description: <insert up to 60 chars description>
- <insert long description, indented with spaces>
+Description: Programming learning platform
+ Developed by NIISI.
+
+
+Package: piktomir-dbg
+Architecture: any
+Depends: ${shlibs:Depends}, ${misc:Depends}
+Description: Programming learning platform
+ Developed by NIISI.
