--- a/debian/rules
+++ b/debian/rules
@@ -3,17 +3,22 @@
 
 export DH_VERBOSE=1
 
-include /usr/share/cdbs/1/rules/debhelper.mk
 include /usr/share/cdbs/1/class/makefile.mk
+
+include /usr/share/cdbs/1/rules/debhelper.mk
 include /usr/share/cdbs/1/rules/patchsys-quilt.mk
 
-DEB_DH_STRIP_ARGS="--dbg-package=piktomir-dbg"
+DEB_DH_STRIP_ARGS := "--dbg-package=piktomir-dbg"
+DEB_AUTO_UPDATE_DEBIAN_CONTROL := yes
+
+DEB_MAKE_BUILD_TARGET := "all"
+DEB_MAKE_MAKEFILE     := $(CURDIR)/platform/Linux/Makefile
 
 # where sources are
-DEB_SRCDIR = $(CURDIR)/platform/Linux
+#DEB_SRCDIR = $(CURDIR)/platform/Linux
 
 # in which directory to build
-DEB_BUILDDIR = $(DEB_SRCDIR)/bin
+DEB_BUILDDIR = $(CURDIR)/platform/Linux
 
 #export CXXFLAGS="$(CXXFLAGS) -g"
 #export CFLAGS="$(CFLAGS) -g"
